# trading

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  _tmp_guard.py  _tmp_mon.py  docker-compose.dryrun.yml  docker-compose.yml  pyproject.toml
docs/: FUNDING_CARRY_FEASIBILITY.md  GRID_DCA.md  HYPEROPT_PARALLEL_BISECT.md  IDEATION_SESSION_20260713.md  OPERATIONS.md  PREREG_14_FUNDING_CARRY.md  PROJECT_STATUS.md  REGIME_SWITCHER.md  RELATIVE_MOMENTUM.md  SERVER_CARLOS.md  SETUP.md  STRATEGY_GUIDE.md  UPWORK_ADAPT_PROMPT.md  UPWORK_PROPOSAL_RAG_B.md  VALIDATION.md  XSEC_MOMENTUM.md  calibration_protocol.md  data_sources.md  dryrun_protocol.md  hypothesis_registry.md  pc2_setup.md  screen_protocol.md  screen_results_20260710.md  validation_incidents.md
llm-forecast-lab/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
pipeline/: .gitkeep  __init__.py  config_hash.py  docker_image.py  freqtrade_cli.py  git_provenance.py  hyperopt_checkpoint.py  hyperopt_resume.py  params_manager.py  regime_stats.py  regimes.py  run_lock.py  run_validation.py  strategy_spaces.py  strategy_warmup.py  timerange_split.py  validation_plan.py  verdict.py  verdict_engine.py  walk_forward.py  wf_resume.py
polymarket/: README.md  __init__.py  requirements.txt
research/: audit_screen_stops.py  autopsy_20m.py  diagnose_m35_13e.py  download_e2_local.py  download_funding_local.py  download_wide_1d.py  funding_carry_lab.py  motor_reconciliation.py  pc2_xsec_robustness.py  r0_exdexe_exzec.py  r1_funding.py  run_experiments.py  (+8 more)
(+646 files in other folders)
