[project]
name = "freqtrade-quant-lab"
version = "0.1.0"
description = "Laboratorio cuantitativo profesional sobre Freqtrade"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "psutil>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["pipeline", "risk", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests que requieren Docker o red",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "risk"]
